--- a/Plantillas/informacion.html
+++ b/Plantillas/informacion.html
@@ -9,13 +9,13 @@
 	<script type="text/javascript" src="../lib/jquery/jquery-1.10.2.min.js"></script>
 	<script type="text/javascript" src="../lib/jquery-ui-1.10.4.custom.min.js"></script>
 	<script type="text/javascript" src="../js/main.js"></script>
-	<title>Información</title>
+	<title>eCatastro</title>
 </head>
 <body>
 	<header>
 		<div class="header-cabecera-verde">
-			<div class="regresar">
-				<a id="btn-regresar"class="icon-flecha-izq" href="#"></a>
+			<div class="atras">
+				<a id="btn-regresar-informacion" class="icon-flecha-izq" href="#"></a>
 			</div>
 			<div class="titulo">
 				<h1 class="header-titulo">
