--- a/Plantillas/predios.html
+++ b/Plantillas/predios.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8">
-	<title>eCatrastro</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<link rel="stylesheet" href="../css/normalize.css"/>
 	<link rel="stylesheet" href="../css/main.css"/>
 	<script type="text/javascript" src="../lib/modernizr.custom.54459.js"></script>
 	<script type="text/javascript" src="../lib/jquery/jquery-1.10.2.min.js"></script>
 	<script type="text/javascript" src="../lib/jquery-ui-1.10.4.custom.min.js"></script>
 	<script type="text/javascript" src="../js/main.js"></script>
+	<title>eCatastro</title>
 </head>
 <body>
 	<header>
 		<div class="header-cabecera-verde">
-			<div class="regresar">
+			<div class="atras">
 				<a id="btn-regresar-predios" class="icon-flecha-izq" href="#"></a>
 			</div>
 			<div class="titulo">
@@ -38,7 +38,7 @@
 			</ul>
 		</div>
 	</header>
-	<section class="area-body">
+	<section class="area-formulario">
 		<div class="formulario-items">
 			<div class="item-forma">
 				<div class="item-etiqueta">Dirección</div>
@@ -69,6 +69,13 @@
 		</div>
 	</section>
 	<footer class="area-footer">
+
+		<div class="div-boton">
+	<button type="button" class="boton">		
+			<span class="icon-lupa"></span>
+	   		<span class="click-boton">Buscar</span>	    
+	</button>
+</div>
 		
 	</footer>
 </body>
