--- a/Plantillas/Certificados.html
+++ b/Plantillas/Certificados.html
@@ -1,75 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<title>Configuracion Catastro</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-		<link rel="stylesheet" href="../css/normalize.css"/>
-		<link rel="stylesheet" href="../css/main.css"/>
-	</head>
-	<body>
-		<header>
-		<div class="header-cabecera-verde">
-			<div class="atras">
-				<a class="icon-flecha-izq" href="#"></a>
-			</div>
-			<div class="titulo">
-				<h1 class="header-titulo">
-					Oficina Móvil de Catastro
-				</h1>
-			</div>
-			<div class="botonera">
-				<a id="btn-cerrar"class="icon-cerrar" href="#"></a>
-			</div>		
+<html lang="es">
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+	<link rel="stylesheet" href="../css/normalize.css"/>
+	<link rel="stylesheet" href="../css/main.css"/>
+	<script type="text/javascript" src="../lib/modernizr.custom.54459.js"></script>
+	<script type="text/javascript" src="../lib/jquery/jquery-1.10.2.min.js"></script>
+	<script type="text/javascript" src="../lib/jquery-ui-1.10.4.custom.min.js"></script>
+	<script type="text/javascript" src="../js/main.js"></script>
+	<title>eCatastro</title>
+</head>
+<body>
+	<header>
+	<div class="header-cabecera-verde">
+		<div class="atras">
+			<a id="btn-regresar-certificados" class="icon-flecha-izq" href="#"></a>
 		</div>
-		<div class="header-cabecera-roja">
+		<div class="titulo">
+			<h1 class="header-titulo">
+				Oficina Móvil de Catastro
+			</h1>
+		</div>
+		<div class="botonera">
+			<a id="btn-cerrar"class="icon-cerrar" href="#"></a>
+		</div>		
+	</div>
+	<div class="header-cabecera-roja">
+		<ul>
+			<li class="primero"><a class="icon-certificado iconoGrande" href="#"></a></li>
+			<li class="segundo">
+				<a href="#">Certificados
+			 		<div class="triangulo">	</div>
+			 	</a>
+			 </li>
+			<li class="tercero"><a class="icon-estrella iconoGrande" href="#"></a></li>
+		</ul>
+	</div>
+</header>
+<section class="area-body">
+	  <div class="filtroItems">
+	  	<span class="textoFiltro">
+	  		<input class="cajaBusqueda" type="text" placeholder="Filtro de Predios" />
+	  	</span>
+	  	<span class="lupaBusqueda"></span>
+	  </div>
+	  <div class="itemsBusqueda" href="#">	
+  			<div class="itemBusqueda"> 
+  				<a href="#">
+	  				<div><span>Certificado nomenclatura de predio</span> </div>		  
+	  				<input class="check" type="checkbox"/>
+	  			</a>
+	  		</div>	 
+	  		<div class="itemBusqueda"> 
+  				<a href="#">
+	  				<div><span>Certificado cédula catastral predio</span> </div>		  
+	  				<input class="check" type="checkbox"/>
+	  			</a>
+	  		</div>	 
+	  		<div class="itemBusqueda"> 
+  				<a href="#">
+	  				<div><span>Certificado cédula catastral lote</span> </div>		  
+	  				<input type="checkbox" class="check"/>
+	  			</a>
+	  		</div>	  			
+	  </div>
+	</section>
+	<footer class="area-footer">
+		<div class="footer-mispredios">
 			<ul>
-				<li class="primero"><a class="icon-certificado iconoGrande" href="#"></a></li>
-				<li class="segundo">
-					<a href="#">Certificados
-				 		<div class="triangulo">	</div>
-				 	</a>
-				 </li>
-				<li class="tercero"><a class="icon-estrella iconoGrande" href="#"></a></li>
+				<li ><a class="icon-sobre iconoGrande" href="#"> Enviar al Correo</a></li>
+				<li ><a class="icon-descargar iconoGrande" href="mapa.html">  Descargar</a></li>
 			</ul>
-		</div>
-	</header>
-	<section class="area-body">
-		  <div class="filtroItems">
-		  	<span class="textoFiltro">
-		  		<input class="cajaBusqueda" type="text" placeholder="Filtro de Predios" />
-		  	</span>
-		  	<span class="lupaBusqueda"></span>
-		  </div>
-		  <div class="itemsBusqueda" href="#">	
-	  			<div class="itemBusqueda"> 
-	  				<a href="#">
-		  				<div><span>Certificado nomenclatura de predio</span> </div>		  
-		  				<input class="check" type="checkbox"/>
-		  			</a>
-		  		</div>	 
-		  		<div class="itemBusqueda"> 
-	  				<a href="#">
-		  				<div><span>Certificado cédula catastral predio</span> </div>		  
-		  				<input class="check" type="checkbox"/>
-		  			</a>
-		  		</div>	 
-		  		<div class="itemBusqueda"> 
-	  				<a href="#">
-		  				<div><span>Certificado cédula catastral lote</span> </div>		  
-		  				<input type="checkbox" class="check"/>
-		  			</a>
-		  		</div>	  			
-		  </div>
-		</section>
-		<footer class="area-footer">
-			<div class="footer-mispredios">
-				<ul>
-					<li ><a class="icon-sobre iconoGrande" href="#"> Enviar al Correo</a></li>
-					<li ><a class="icon-descargar iconoGrande" href="mapa.html">  Descargar</a></li>
-				</ul>
-		    </div>
-		</footer>
+	    </div>
+	</footer>
 
-	</body>
+</body>
 </html>
