--- a/Plantillas/ayuda.html
+++ b/Plantillas/ayuda.html
@@ -15,7 +15,7 @@
 	<header>
 		<div class="header-cabecera-verde">
 			<div class="atras">
-				<a id="btn-regresar-notificaciones" class="icon-flecha-izq" href="#"></a>
+				<a id="btn-regresar-ayuda" class="icon-flecha-izq" href="#"></a>
 			</div>
 			<div class="titulo">
 				<h1 class="header-titulo">
