--- a/Plantillas/consultas.html
+++ b/Plantillas/consultas.html
@@ -14,6 +14,9 @@
 <body>
 	<header>
 		<div class="header-cabecera-verde">
+			<div class="atras">
+				<a id="btn-regresar-consultas" class="icon-flecha-izq" href="#"></a>
+			</div>
 			<div class="titulo">
 				<h1 class="header-titulo">
 					Oficina Móvil de Catastro
