--- a/Plantillas/mis_predios.html
+++ b/Plantillas/mis_predios.html
@@ -1,96 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>eCatrastro</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<link rel="stylesheet" href="../css/normalize.css"/>
 	<link rel="stylesheet" href="../css/main.css"/>
 	<script type="text/javascript" src="../lib/modernizr.custom.54459.js"></script>
 	<script type="text/javascript" src="../lib/jquery/jquery-1.10.2.min.js"></script>
 	<script type="text/javascript" src="../lib/jquery-ui-1.10.4.custom.min.js"></script>
+	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
 	<script type="text/javascript" src="../js/main.js"></script>
+	<title>eCatastro</title>
 </head>
-	<body>
-		<header>
-		<div class="header-cabecera-verde">
-			<div class="atras">
-				<a id="btn-regresar-mis-predios" class="icon-flecha-izq" href="#"></a>
-			</div>
-			<div class="titulo">
-				<h1 class="header-titulo">
-					Oficina Móvil de Catastro
-				</h1>
-			</div>
-			<div class="botonera">
-				<a id="btn-cerrar"class="icon-cerrar" href="#"></a>
-			</div>		
+<body>
+	<header>
+	<div class="header-cabecera-verde">
+		<div class="atras">
+			<a id ="btn-regresar-mis-predios" class="icon-flecha-izq" href="#"></a>
 		</div>
-		<div class="header-cabecera-roja">
+		<div class="titulo">
+			<h1 class="header-titulo">
+				Oficina Móvil de Catastro
+			</h1>
+		</div>
+		<div class="botonera">
+			<a id="btn-cerrar"class="icon-cerrar" href="#"></a>
+		</div>		
+	</div>
+	<div class="header-cabecera-roja">
+		<ul>
+			<li class="primero"><a class="icon-buscardoc iconoGrande" href="#"></a></li>
+			<li class="segundo">
+				<a href="#">Mis Predios
+			 		<div class="triangulo">	</div>
+			 	</a>
+			 </li>
+			<li class="tercero"><a class="icon-estrella iconoGrande" href="#"></a></li>
+		</ul>
+	</div>
+</header>
+<div id="map_canvas">
+	<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7932.138142834956!2d-75.57837539932245!3d6.254630700734024!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2s!4v1394739709207" width="400" height="300" frameborder="0" style="border:0">
+	</iframe>
+</div>
+<section id="lista_mis_predios" class="area-body">
+	  <div class="filtroItems">
+	  	<span class="textoFiltro">
+	  		<input class="cajaBusqueda" type="text" placeholder="Filtro de Predios" />
+	  	</span>
+	  	<span class="lupaBusqueda"></span>
+	  </div>
+	  <div class="itemsBusqueda" href="#">	
+  			<div class="itemBusqueda"> 
+  				<a href="#">
+	  				<div class="direccion"><span>Dirección:    </span>   Carrera 22 # 128-66 Apto 908  </div>
+	  				<div class="matricula"><span>Matrícula:    </span>    ERF86AS87F6</div>
+	  				<a  class="flechita" href="#"></a>
+	  			</a>
+	  		</div>
+  			<div class="itemBusqueda"> 
+  				<a href="#">
+	  				<div class="direccion"><span>Dirección:    </span>   Carrera 22 # 128-66 Apto 908  </div>
+	  				<div class="matricula"><span>Matrícula:    </span>    ERF86AS87F6</div>
+	  				<a  class="flechita" href="#"></a>
+	  			</a>
+	  		</div>
+  			<div class="itemBusqueda"> 
+  				<a href="#">
+	  				<div class="direccion"><span>Dirección:    </span>   Carrera 22 # 128-66 Apto 908  </div>
+	  				<div class="matricula"><span>Matrícula:    </span>    ERF86AS87F6</div>
+	  				<a  class="flechita" href="#"></a>
+	  			</a>
+	  		</div>
+  			<div class="itemBusqueda"> 
+  				<a href="#">
+	  				<div class="direccion"><span>Dirección:    </span>   Carrera 22 # 128-66 Apto 908  </div>
+	  				<div class="matricula"><span>Matrícula:    </span>    ERF86AS87F6</div>
+	  				<a  class="flechita" href="#"></a>
+	  			</a>
+	  		</div>
+  			<div class="itemBusqueda"> 
+  				<a href="#">
+	  				<div class="direccion"><span>Dirección:    </span>   Carrera 22 # 128-66 Apto 908  </div>
+	  				<div class="matricula"><span>Matrícula:    </span>    ERF86AS87F6</div>
+	  				<a  class="flechita" href="#"></a>
+	  			</a>
+	  		</div>
+	  </div>
+	</section>
+	<footer class="area-footer">
+		<script src="../js/geolocalizacion.js"></script>
+		<div class="footer-mispredios">
 			<ul>
-				<li class="primero"><a class="icon-buscardoc iconoGrande" href="#"></a></li>
-				<li class="segundo">
-					<a href="#">Mis Predios
-				 		<div class="triangulo">	</div>
-				 	</a>
-				 </li>
-				<li class="tercero"><a class="icon-estrella iconoGrande" href="#"></a></li>
+				<li >
+					<a id="btn-mis-predios-vista-lista" class="icon-tramites iconoGrande" href="#">  Lista</a>
+				</li>
+				<li >
+					<a id="btn-mis-predios-vista-mapa" class="icon-mapa iconoGrande" href="#"><!--href="mapa.html"-->  Mapa</a>
+				</li>
 			</ul>
-		</div>
-	</header>
-	<section class="area-body">
-		  <div class="filtroItems">
-		  	<span class="textoFiltro">
-		  		<input class="cajaBusqueda" type="text" placeholder="Filtro de Predios" />
-		  	</span>
-		  	<span class="lupaBusqueda"></span>
-		  </div>
-		  <div class="itemsBusqueda" href="#">	
-	  			<div class="itemBusqueda"> 
-	  				<a href="#">
-		  				<div class="direccion"><span>Dirección:    </span>   Carrera 22 # 128-66 Apto 908  </div>
-		  				<div class="matricula"><span>Matrícula:    </span>    ERF86AS87F6</div>
-		  				<a  class="flechita" href="#"></a>
-		  			</a>
-		  		</div>
-	  			<div class="itemBusqueda"> 
-	  				<a href="#">
-		  				<div class="direccion"><span>Dirección:    </span>   Carrera 22 # 128-66 Apto 908  </div>
-		  				<div class="matricula"><span>Matrícula:    </span>    ERF86AS87F6</div>
-		  				<a  class="flechita" href="#"></a>
-		  			</a>
-		  		</div>
-	  			<div class="itemBusqueda"> 
-	  				<a href="#">
-		  				<div class="direccion"><span>Dirección:    </span>   Carrera 22 # 128-66 Apto 908  </div>
-		  				<div class="matricula"><span>Matrícula:    </span>    ERF86AS87F6</div>
-		  				<a  class="flechita" href="#"></a>
-		  			</a>
-		  		</div>
-	  			<div class="itemBusqueda"> 
-	  				<a href="#">
-		  				<div class="direccion"><span>Dirección:    </span>   Carrera 22 # 128-66 Apto 908  </div>
-		  				<div class="matricula"><span>Matrícula:    </span>    ERF86AS87F6</div>
-		  				<a  class="flechita" href="#"></a>
-		  			</a>
-		  		</div>
-	  			<div class="itemBusqueda"> 
-	  				<a href="#">
-		  				<div class="direccion"><span>Dirección:    </span>   Carrera 22 # 128-66 Apto 908  </div>
-		  				<div class="matricula"><span>Matrícula:    </span>    ERF86AS87F6</div>
-		  				<a  class="flechita" href="#"></a>
-		  			</a>
-		  		</div>
-		  </div>
-		</section>
-		<footer class="area-footer">
-			<div class="footer-mispredios">
-				<ul>
-					<li ><a class="icon-tramites iconoGrande" href="#">  Lista</a></li>
-					<li ><a class="icon-mapa iconoGrande" href="mapa.html">  Mapa</a></li>
-				</ul>
-		    </div>
-		</footer>
-
-	</body>
+	    </div>
+	</footer>
+</body>
 </html>
