--- a/Plantillas/mis_predios_detalle.html
+++ b/Plantillas/mis_predios_detalle.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8">
-	<title>eCatrastro</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<link rel="stylesheet" href="../css/normalize.css"/>
 	<link rel="stylesheet" href="../css/main.css"/>
 	<script type="text/javascript" src="../lib/modernizr.custom.54459.js"></script>
 	<script type="text/javascript" src="../lib/jquery/jquery-1.10.2.min.js"></script>
 	<script type="text/javascript" src="../lib/jquery-ui-1.10.4.custom.min.js"></script>
 	<script type="text/javascript" src="../js/main.js"></script>
+	<title>eCatastro</title>
 </head>
 <body>
 	<header>
 		<div class="header-cabecera-verde">
 			<div class="regresar">
-				<a id="btn-regresar-mis-predios-detalle"class="icon-flecha-izq" href="#"></a>
+				<a id="btn-regresar-mis-predios-detalle" class="icon-flecha-izq" href="#"></a>
 			</div>
 			<div class="titulo">
 				<h1 class="header-titulo">
